added user route

--- a/views/partials/settings.jade
+++ b/views/partials/settings.jade
@@ -5,10 +5,10 @@
     input(type="text", id="username", placeholder="Title*", ng-model="user.username", required).form-control
     p(ng-show="user.username.$invalid && !user.username.$pristine").form-err A title is required
   .form-group
-    label(for="email") Title
-    input(type="text", id="email", placeholder="Title*", ng-model="user.email", required).form-control
-    p(ng-show="user.email.$invalid && !user.email.$pristine").form-err A title is required
+    label(for="email") Email
+    strong(ng-bind="user.email")
+    a.btn.btn--sm Change Email
+    //- input(type="text", id="email", placeholder="Title*", ng-model="user.email", required).form-control
+    //- p(ng-show="user.email.$invalid && !user.email.$pristine").form-err A title is required
   .form-group
-    label(for="title") Title
-    input(type="text", id="title", placeholder="Title*", ng-model="user.title", required).form-control
-    p(ng-show="user.name.$invalid && !user.name.$pristine").form-err A title is required
+    a.btn.btn--sm Change Password
