indenticon func added

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -221,3 +221,4 @@ ul.pagination .active a{background:#41494f;color:#fff}
 .dropdown-menu thead{text-align:center}
 .dropdown-menu button{padding:4px;-webkit-border-radius:0;border-radius:0}
 .dropdown-menu .text-muted{color:#6f89a3}
+.username__avatar{width:25px;display:block;margin-right:10px;float:left}
