--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -23,3 +23,9 @@
 @import './components/reports.styl'
 @import './components/select2.styl'
 @import './components/datepicker.styl'
+
+.username__avatar
+  width 25px
+  display block
+  margin-right 10px
+  float left
