indenticon func added

--- a/views/app.jade
+++ b/views/app.jade
@@ -70,11 +70,13 @@ html(ng-app="myApp")
               | Settings
           a(href="/logout", target="_self").nav-signout
             li
-              img(src="#{avatar}").username__avatar
-              | #{username}
-            li
-              i.fa.fa-sign-out
-              | Signout
+              .clearfix
+                img(src="#{avatar}").username__avatar
+                | #{username}
+              br
+              .clearfix
+                i.fa.fa-sign-out
+                | Signout
             //- li
             //-   img(src="#{avatar}")
             //-   | #{username}
